[project]
name = "dowker-rips-tumor-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dowker-complex",
    "dowker-rips-complex",
    "h5py>=3.14.0",
    "imblearn>=0.0",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "scikit-learn==1.6.1",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
dowker-complex = { path = "../dowker-complex", editable = true }
dowker-rips-complex = { path = "../dowker-rips-complex", editable = true }
