[project]
name = "dowker-rips-tumor-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dowker-complex>=0.1.2",
    "dowker-rips-complex>=0.1.0",
    "h5py>=3.14.0",
    "imbalanced-learn>=0.14.0",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "tqdm>=4.67.1",
]
